
The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]
### Fixed
- [API] [X509CERTIFICATE] AssertionError on non-existent certificate
- [MIGRATIONS] Set missing default values for complex fields in Frontends


## [2.28.0] - 2025-06-26
### Added
- [API_PARSER] [SENTINEL_ONE_IDENTITY_GRAPH] New collector
### Changed
- [DEPENDENCIES]
  - certifi 2025.4.26 -> 2025.6.15
  - django 4.2.21 -> 4.2.23
  - protobuf 4.25.3 -> 4.25.8
### Fixed
- [API_PARSER] [PROOFPOINT_POD] Increment the last_api_call of 1 second to avoid duplication
- [API_PARSER] [BLACKBERRY_CYLANCE] Wait for 60s when rate-limited by the API
- [SYSTEM] [PF] Add missing internal rule for inter-cluster GUI/API access
- [CLUSTER] [REDIS] Allow to correctly remove node even if it/redis is inaccessible
- [SYSTEM] [NODE] Node deletion error caused by logomelasticsearch model modification


## [2.27.1] - 2025-06-13
### Fixed
- [API_PARSER] [TRENDMICRO_VISIONONE] Avoid delays on log collection, depending on log types


## [2.27.0] - 2025-06-10
### Added
- [VULTURED] Delay option on api_request calls
- [FRONTEND] Rsyslog queue settings
- [API_PARSER] [UBIKA] New collector
### Changed
- [API_PARSER] [CISCO_UMBRELLA_MANAGED_ORG] Add organisation id and name in output logs
- [APPLICATIONS] [LOGOMELASTICSEARCH] Allow use of a TLS Profile instead of a simple X509 Certificate
- [SYSTEM] [TLS_PROFILE] Reorder parameters into 2 separate sections
### Fixed
- [API_PARSER] [BEYONDTRUST_REPORTINGS] Fix parsing of support session logs
- [API_PARSER] [PERCEPTION_POINT_X_RAY] Improve error message
- [API_PARSER] [GATEWATCHER_ALERTS] Update endpoint of the API
- [API_PARSER] [CISCO_UMBRELLA_MANAGED_ORG] Ensure all attributes always have the correct type in code
- [API_PARSER] [CISCO_UMBRELLA] Avoid never-ending collect
- [API] [X509CERTIFICATE] Avoid conflicts when requesting a specific certificate

